PR/50937: Henning Petersen: Fix subnormal printf for long double x86. From FreeBSD PR 85080.